--- a/main.css
+++ b/main.css
@@ -2,7 +2,10 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+body{
+    background-color: #2a2a2a;
+    color: white;
+}
 /******** GENERAL ********/
 
 .supertitle{
@@ -34,19 +37,14 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom: 2px solid red;
+    /*border-bottom: 2px solid red;*/
 }
 .maintitle{
     display: flex;
     width: 100%;
-    
-}
-
-.darkmode{
-    width: 100%;
-}
-.darkmode img{
-    width: 5%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 header img{
     width: 8%;
@@ -67,13 +65,20 @@ section{
 .mainbox{
     grid-area: 1 / 1 / 2 / 2;
     margin: 1%;
-    background-color: red;
+    
     display: grid;
     grid-template-columns: 50% 30%;
     grid-template-rows: 30% 70%;
     width: 100%;
     justify-content: center;
     align-items: center;
+
+    background: rgba(199, 7, 7, 0.7);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.1px);
+    -webkit-backdrop-filter: blur(4.1px);
+    border: 1px solid rgba(255, 0, 0, 0.25);
 }
 .inputname, .gender, .group{
     margin: 4%;
@@ -88,6 +93,7 @@ section{
     margin-left: auto;
     border: none;
     border-radius: 2px;
+    font-size: 120%;
 }
 
 .gen, .teens, .tweens{
@@ -113,7 +119,9 @@ section{
     margin: 2%;
 }
 
-
+.btnSave:hover, .btnClear:hover{
+    border-bottom:2px solid rgb(255, 0, 0)
+}
 
 
 /***************************/
@@ -122,15 +130,21 @@ section{
 
 .secondbox{
     grid-area: 2 / 1 / 3 / 2;
-    background-color: aqua;
     margin: 1%;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: 0.2fr repeat(2, 0.4fr);
+
+
+    background: rgba(0, 204, 255, 0.64);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.2px);
+    -webkit-backdrop-filter: blur(4.2px);
+    border: 1px solid rgba(0, 255, 255, 0.25);
 }
 
 .generalCat{
-    background-color: pink;
     display: grid;
     grid-template-columns: 1fr 0,2fr;
     grid-template-rows: 0.2fr repeat(2, 0.5fr);
@@ -151,7 +165,6 @@ section{
 
 
 .specificCat{
-    background-color: orange;
     display: grid;
     grid-template-columns: 1fr 0,2fr;
     grid-template-rows: 0.2fr repeat(3, 0.5fr);
@@ -181,8 +194,13 @@ section{
     border-radius: 5px;
     width: 50%;
     height: 20%;
+    background-color: rgb(223, 231, 233);
+    box-shadow: 0 0 26px rgba(0,0,0, 0.5);
 }
 
+.btngentext2 input:hover, .btngenerate input:hover{
+    border-bottom:2px solid rgb(0, 255, 225)
+}
 
 .generalCat, .specificCat{
     margin: 1% 4% ;
@@ -197,7 +215,6 @@ section{
 
 .thirdbox{
     grid-area: 1 / 2 / 3 / 3;
-    background-color: gold;
     margin: 1%;
     display: grid;
     grid-template-columns: 45% 45%;
@@ -208,6 +225,13 @@ section{
     grid-row-gap: 10px;
     justify-content: center;
     align-items: center;
+
+    background: rgba(131, 203, 22, 0.64);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.2px);
+    -webkit-backdrop-filter: blur(4.2px);
+    border: 1px solid rgba(255, 167, 0, 0.25);
 }
 
 .thirdbox h2{
@@ -225,12 +249,6 @@ section{
 .btncopy img{
     width: 10%;
 }
-.btncopy img:hover{
-    background-color: yellowgreen;
-    border-radius: 5px;
-    transition: 0.5s;
-    box-shadow: 0 0 26px rgba(0,0,0, 0.7);
-}
 
 .btnshuffle{
     grid-area: 2 / 2 / 3 / 3;
@@ -243,11 +261,8 @@ section{
 .btnshuffle img{
     width: 10%;
 }
-.btnshuffle img:hover{
-    background-color: yellowgreen;
-    border-radius: 5px;
-    transition: 0.5s;
-    box-shadow: 0 0 26px rgba(0,0,0, 0.7);
+.btnshuffle img:hover, .btncopy img:hover{
+    border-bottom:2px solid rgb(170, 255, 0);
 }
 
 .thirdbox h3{
@@ -261,6 +276,22 @@ section{
     border: none;
     border-radius: 5px;
     box-shadow: 0 0 26px rgba(0,0,0, 0.5);
+}
+
+/***************************/
+
+/******** FOOTER BOX ********/
+footer{
+    border-top: 1px solid yellowgreen;
+    padding-top: 1%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+footer img{
+    width: 20px;
 }
 
 /***************************/
