--- a/views/index.html
+++ b/views/index.html
@@ -30,8 +30,8 @@
             <div class="gender">
                 <h3 class="title">Gender</h3>
                 <div class="gen">
-                    <label for="boy">Boy</label><input type="radio" name="gender" id="boy" value="Boy" class="gender">
-                    <label for="girl">Girl</label><input type="radio" name="gender" id="girl" value="Girl" class="gender">
+                    <label for="boy">Boy</label><input type="radio" name="gender" id="boy" value="boy" class="gender">
+                    <label for="girl">Girl</label><input type="radio" name="gender" id="girl" value="girl" class="gender">
                 </div>
             </div>
             <div class="group">
@@ -52,9 +52,9 @@
                 </div>
             </div>
             <div class="btns">
-                <img class="btnSave" src="../public/img/save.png" alt="save button">
+                <!-- <img class="btnSave" src="../public/img/save.png" alt="save button">-->
                 <img class="btnClear" src="../public/img/clear.png" alt="clear button">
-            </div>
+            </div> 
             <!-- <input type="button" class="btnmainbox" value="save"> -->
         </div>
         <div class="secondbox">
